finished the lLanding page excersize for odin and various other misc updates

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
 
         <div class="links">
-            <p class="link"><a> link one </a></p>
-            <p class="link"><a> link two </a></p>
-            <p class="link"><a> link three </a></p>
+            <p class="link"><a> about </a></p>
+            <p class="link"><a> projeccts </a></p>
+            <p class="link"><a> contact </a></p>
 
         </div>
 
@@ -26,9 +26,8 @@
 
     <section class="section1">
         <div class="sec_1_left">
-            <h1>This site is awesome </h1>
-            <p class="section1text">This is some secondary text that will explain more about the topic or item. This is
-                more text to make it look more like the design.</p>
+            <h1>Aeon's Veil</h1>
+            <p class="section1text">A new rpg and action game from Barbarossa Lives Studios. it is based in a world left to its own by the aliens who created the inhabitants.  Computers and magic come from with in and danger from without.  Be who ever you want in the skill based game</p>
             <button class="signup">Sign Up</button>
         </div>
         <div class=sec_1_right>
@@ -37,31 +36,45 @@
     </section>
 
     <section class="section2">
-        <h2>Title for the photos</h2>
+        <h2>Screen Shots</h2>
         <div class="smallphotos">
-            <img src="nature1.jpg">
-            <p>Image one discripttion</p>
-            <img src="nature2.jpg">
-            <p>Image two discription</p>
-            <img src="nature3.jpg">
-            <p>Image three dispription</p>
-            <img src="nature4.jpg">
-            <p>Image four discription</p>
+            <div class="imagegroup">
+                <img class="smallimage" src="nature1.jpg">
+                <p>Enviroment</p>
+            </div>
+            <div class="imagegroup">
+                <img class = "smallimage" src="nature2.jpg">
+                <p>Magic</p>
+            </div>              
+            <div class="imagegroup">
+                <img class = "smallimage" src="nature3.jpg">
+                <p>Magic</p>
+                </div>
+            <div class="imagegroup">
+                <img class="smallimage" src="nature4.jpg">
+                <p>Skills</p>
+            </div>
+
         </div>
+        </section>
 
         <section class="section3">
             <blockquote>
-                <p>quote for the page</p>
-                <h4>author <cite>source of the Quote</cite></h4>
+                <p><em>"I must not fear. Fear is the mind-killer. Fear is the little death that brings total obliteration. I will face my fear. I will permit it to pass over me and through me. And when it has gone past I will turn the inner eye to see its path. Where the fear has gone there will be nothing. Only I will remain," is a mantra used by the Bene Gesserit, a powerful sisterhood with mystical powers, to overcome fear.</em></p>
+                <h4>Frank Herbert  <cite> Bene Gesserit Litany Against Fear,</cite></h4>
             </blockquote>
         </section>
 
         <footer>
-            <div>
-                <h3>Call to Action</h3>
-                <p> discription of call to action</p>
+            <div class = "footeritems">
+                <div class= "action">
+                    <h3>Stay on top of the action</h3>
+                    <p class = "actiontext"> ign up for the newsletter to stay up to date</p>
+                </div>
+                <div class = "actionbutton">
+                    <button>Sign Up</button>
+                </div>
             </div>
-            <button>Sign Up</button>
         </footer>
 
 
